--- a/src/index.css
+++ b/src/index.css
@@ -126,14 +126,102 @@ body {
   padding-top: 8.8rem;
   padding-bottom: 8.8rem;
 }
-
+.desserts__container {
+  display: flex;
+  flex-direction: column;
+}
 .desserts {
   width: 100%;
-  width: 70%;
+  max-width: 800px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  column-gap: 2.4rem;
+  row-gap: 3.2rem;
 }
+.title {
+  font-size: 4rem;
+  margin-bottom: 3.2rem;
+  color: var(--color-rose-900);
+}
+
 .your-cart {
   width: 100%;
   width: 30%;
+}
+
+.card {
+}
+
+.card__image {
+  border-radius: 0.8rem;
+}
+
+.card__btn {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-top: 1.6rem;
+}
+
+.card__add__to {
+  display: flex;
+  align-items: center;
+  background-color: var(--color-white);
+  border-radius: 999px;
+  border: 1px solid var(--color-rose-400);
+  cursor: pointer;
+  padding: 1.2rem 2.8rem;
+  width: 160px;
+  font-family: inherit;
+  margin-top: -22px;
+  position: relative;
+  z-index: 100;
+  span {
+    flex-shrink: 0;
+    font-weight: 600;
+    font-size: var(--text-preset-4-bold-size);
+  }
+}
+
+.card__body {
+}
+.card__btns__amount {
+  background-color: var(--color-red);
+  width: 160px;
+  display: flex;
+  justify-content: space-between;
+  padding: 1.1rem 2.8rem;
+  border-radius: 999px;
+  margin-top: -22px;
+  color: var(--color-white);
+  align-items: center;
+}
+.card__btn__amount {
+  background-color: transparent;
+  border: 0;
+  border: 1px solid var(--color-white);
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  &:active {
+    background-color: var(--color-white);
+  }
+  &:active svg path {
+    fill: var(--color-red);
+  }
+}
+
+.cart__category {
+}
+
+.cart__name {
+}
+
+.cart__price {
 }
 
 @media screen and (max-width: 900px) {
@@ -146,5 +234,10 @@ body {
 
   .your-cart {
     width: 100%;
+  }
+  @media screen and (max-width: 600px) {
+    .desserts {
+      row-gap: 2.4rem;
+    }
   }
 }
