--- a/src/index.css
+++ b/src/index.css
@@ -154,6 +154,10 @@ body {
 
 .card__image {
   border-radius: 0.8rem;
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 0.8rem;
 }
 
 .card__btn {
